fix alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     /* resize: both; */
     /* overflow: auto; */
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 .job-header-container{
     display: grid;
